fix alignment between current proj and add task

--- a/src/style.css
+++ b/src/style.css
@@ -152,7 +152,6 @@ li > img:hover {
 
 .addtask > span {
   text-align: center;
-  margin-right: 4%;
   width: 100%;
 }
 
